--- a/index.html
+++ b/index.html
@@ -4,180 +4,53 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ONE QUARTER EQUALS A D$LLAR</title>
-
+<script src="https://cdn.tailwindcss.com"></script>
 <style>
-/* 1. Global Reset & Custom Font */
+/* Set a custom font family */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-
-/* This ensures the container centers itself if it takes up the full viewport */
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    padding: 20px;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-    background-color: #0d1226; /* Dark navy background */
+body {
+font-family: 'Inter', sans-serif;
+background-color: #0d1226; /* Dark navy background for the whole page */
 }
-
-/* 2. Main Container Styling */
-.main-container {
-    max-width: 900px;
-    width: 100%;
-    background-color: #1c213d; /* Inner dark color */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
-    border-radius: 12px;
-    overflow: hidden;
-    display: flex; /* Flexbox for the two columns */
-    flex-wrap: wrap; /* Allows columns to wrap on smaller screens */
-}
-
-/* 3. Left (Image/Branding) Column */
-.left-panel {
-    width: 50%;
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #0d1226; /* Deepest dark color */
-    color: white;
-    box-sizing: border-box;
-}
+/* Using solid gold color for strong contrast like the cover art */
 .title-text {
-    color: #FFD700; /* Solid Gold */
-    font-weight: 900;
-    line-height: 1.1;
-    text-transform: uppercase;
-    font-size: 3rem; /* Approx. equivalent of text-5xl/6xl */
-    text-align: center;
-    margin-bottom: 1rem;
+color: #FFD700; /* Solid Gold */
+font-weight: 900;
+line-height: 1.1; /* Tighter line height for large text */
 }
-.book-cover {
-    width: 256px;
+/* Custom input focus color */
+input:focus {
+border-color: #FFD700 !important;
+box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
+}
+/* Style to ensure the image displays as a rectangle */
+.book-cover-container {
+    height: auto; /* Allow height to adjust */
+    width: 256px; /* A fixed width (64 units in Tailwind) */
     max-width: 100%;
-    height: auto;
-    object-fit: contain;
-    border-radius: 8px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-    margin: 10px auto 30px;
-}
-
-/* 4. Right (Form) Column */
-.right-panel {
-    width: 50%;
-    padding: 30px;
-    background-color: #f9fafb; /* Light gray background for form */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    box-sizing: border-box;
-}
-
-/* 5. Mobile Responsiveness */
-@media (max-width: 768px) {
-    .main-container {
-        flex-direction: column;
-    }
-    .left-panel, .right-panel {
-        width: 100%;
-        padding: 30px 20px;
-    }
-    .title-text {
-        font-size: 2.5rem;
-    }
 }
 </style>
 </head>
-<body>
+<body class="min-h-screen flex items-center justify-center p-4">
 
-<div class="wrapper">
-    <div class="main-container">
+<div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
-        <div class="left-panel">
+<div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
 
-            <header style="text-align: center; width: 100%;">
-                <p style="font-size: 1.5rem; letter-spacing: 0.1em; text-transform: uppercase; font-weight: 700; color: #fcd34d; margin-bottom: 0;">INSIDE LOOK</p>
-            </header>
+<header class="text-center w-full">
+<p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
+</header>
 
-            <img src="https://i.imgur.com/EwWFtC6.jpg"
-                alt="One Quarter Equals A D$llar Blueprint Cover"
-                class="book-cover">
-
-            <main style="text-align: center;">
-                <h1 class="title-text">
-                    <span style="display: block;">ONE QUARTER</span>
-                    <span style="display: block;">EQUALS A D$LLAR</span>
-                </h1>
-                <p style="color: #fcd34d; font-size: 1.125rem; font-weight: 700;">7 Chapters to 7 Figures</p>
-                <p style="color: #9ca3af; font-size: 0.875rem; margin-top: 0.5rem;">The #1 Blueprint To Financial Freedom</p>
-            </main>
-
-            <footer style="margin-top: auto; padding-top: 2rem;">
-                <p style="font-size: 0.75rem; color: #6b7280;">© 2025 One Quarter Enterprises LLC</p>
-            </footer>
-        </div>
-
-        <div class="right-panel">
-            <div>
-                <h2 style="font-size: 1.5rem; font-weight: 700; color: #1f2937; margin-bottom: 1rem;">
-                    Get Your Free Inside Look
-                </h2>
-                <p style="color: #4b5563; margin-bottom: 1.5rem;">
-                    Start converting a Quarter of Effort into a Dollar of Wealth.
-                </p>
-
-                <form id="lead-form" style="margin-top: 1rem;"
-                action="YOUR_MAILERLITE_FORM_ACTION_URL"
-                method="post">
-
-                <div style="margin-bottom: 1rem;">
-                    <label for="name" style="display: block; font-size: 0.875rem; font-weight: 500; color: #374151;">Your Name (Optional)</label>
-                    <input type="text" name="fields[name]" id="name" placeholder="John Doe"
-                    style="display: block; width: 100%; padding: 10px 16px; border: 1px solid #d1d5db; border-radius: 6px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); box-sizing: border-box; font-family: inherit;"
-                    autocomplete="name">
-                </div>
-
-                <div style="margin-bottom: 1rem;">
-                    <label for="email" style="display: block; font-size: 0.875rem; font-weight: 500; color: #374151;">Enter Your Best Email *</label>
-                    <input type="email" name="fields[email]" id="email" required placeholder="you@example.com"
-                    style="display: block; width: 100%; padding: 10px 16px; border: 1px solid #d1d5db; border-radius: 6px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); box-sizing: border-box; font-family: inherit;"
-                    autocomplete="email">
-                </div>
-
-                <button type="submit" 
-                style="width: 100%; display: flex; justify-content: center; padding: 12px 16px; border: none; border-radius: 6px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); font-size: 1.125rem; font-weight: 700; color: #1c213d; background-color: #FFD700; transition: background-color 0.3s; cursor: pointer; margin-top: 1.5rem; text-align: center;">
-                    Get My Free Inside Look
-                </button>
-
-                <p style="text-align: center; font-size: 0.875rem; margin-top: 0.75rem; display: none;" id="form-message"></p>
-
-                <p style="font-size: 0.75rem; text-align: center; color: #6b7280; margin-top: 1rem;">
-                    We respect your privacy. Your data is 100% secure.
-                </p>
-                </form>
-            </div>
-            
-        </div>
-
-    </div>
+<div class="book-cover-container mx-auto p-2">
+    <img src="https://i.imgur.com/EwWFtC6.jpg"
+    alt="One Quarter Equals A D$llar Blueprint Cover"
+    onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
+    class="w-full h-auto object-contain rounded-lg shadow-xl">
 </div>
 
-<script>
-// Basic client-side message handler
-document.addEventListener('DOMContentLoaded', () => {
-    const form = document.getElementById('lead-form');
-    const formMessage = document.getElementById('form-message');
-
-    if (form) {
-        form.addEventListener('submit', () => {
-            formMessage.style.display = 'block';
-            formMessage.textContent = 'Submitting... Please wait for redirect.';
-            formMessage.style.color = '#4b5563';
-        });
-    }
-});
-</script>
-</body>
-</html>
+<main class="text-center">
+<h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
+<span class="block">ONE QUARTER</span>
+<span class="block">EQUALS A D$LLAR</span>
+</h1>
+<p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
