--- a/index.html
+++ b/index.html
@@ -1,94 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ONE QUARTER EQUALS A D$LLAR</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Get Your Inside Look</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f4f6; /* Light gray background */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        .form-container {
+            max-width: 450px;
+            width: 100%;
+            padding: 30px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+        .form-title {
+            font-size: 24px;
+            font-weight: bold;
+            color: #1f2937;
+            margin-bottom: 10px;
+        }
+        .form-subtitle {
+            color: #4b5563;
+            margin-bottom: 25px;
+        }
+        .form-field {
+            margin-bottom: 15px;
+        }
+        .form-label {
+            display: block;
+            font-size: 14px;
+            font-weight: 500;
+            color: #374151;
+            margin-bottom: 5px;
+        }
+        .form-input {
+            width: 100%;
+            padding: 10px 12px;
+            border: 1px solid #d1d5db;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .submit-button {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            font-weight: bold;
+            color: #1c213d;
+            background-color: #FFD700; /* Gold */
+            cursor: pointer;
+            margin-top: 15px;
+        }
+    </style>
+</head>
+<body>
 
-<style>
-/* 1. Global Reset & Custom Font */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+<div class="form-container">
+    <h2 class="form-title">Get Your Free Inside Look</h2>
+    <p class="form-subtitle">Start converting a Quarter of Effort into a Dollar of Wealth.</p>
 
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    padding: 20px;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-    background-color: #0d1226; /* Dark navy background */
-}
+    <form id="lead-form" action="YOUR_MAILERLITE_FORM_ACTION_URL" method="post">
 
-/* 2. Main Container Styling */
-.main-container {
-    max-width: 900px;
-    width: 100%;
-    background-color: #1c213d; /* Inner dark color */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
-    border-radius: 12px;
-    overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
-}
+        <div class="form-field">
+            <label for="name" class="form-label">Your Name (Optional)</label>
+            <input type="text" name="fields[name]" id="name" placeholder="John Doe" class="form-input" autocomplete="name">
+        </div>
 
-/* 3. Left (Image/Branding) Column */
-.left-panel {
-    width: 50%;
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #0d1226; /* Deepest dark color */
-    color: white;
-    box-sizing: border-box;
-}
-.title-text {
-    color: #FFD700; /* Solid Gold */
-    font-weight: 900;
-    line-height: 1.1;
-    text-transform: uppercase;
-    font-size: 3rem;
-    text-align: center;
-    margin-bottom: 1rem;
-}
-.book-cover {
-    width: 256px;
-    max-width: 100%;
-    height: auto;
-    object-fit: contain;
-    border-radius: 8px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-    margin: 10px auto 30px;
-}
+        <div class="form-field">
+            <label for="email" class="form-label">Enter Your Best Email *</label>
+            <input type="email" name="fields[email]" id="email" required placeholder="you@example.com" class="form-input" autocomplete="email">
+        </div>
 
-/* 4. Right (Form) Column - CRITICAL FIX HERE: Guaranteed White Background */
-.right-panel {
-    width: 50%;
-    padding: 30px;
-    background-color: #ffffff; /* Explicitly set to White */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    box-sizing: border-box;
-}
+        <button type="submit" class="submit-button">
+            Get My Free Inside Look
+        </button>
 
-/* 5. Form Elements - Basic, guaranteed visibility styles */
-.form-field {
-    margin-bottom: 1rem;
-}
-.form-label {
-    display: block;
-    font-size: 0.875rem;
-    font-weight: 500;
-    color: #374151; /* Dark label text */
-    margin-bottom: 5px;
-}
-.form-input {
-    display: block;
-    width: 100%;
-    padding: 10px 16px;
-    border: 1px solid #d1d5db;
-    border-radius: 6px;
-    box-shadow: 0 1px 2px rgba(0,
+        <p style="text-align: center; font-size: 12px; color: #6b7280; margin-top: 10px;">
+            We respect your privacy. Your data is 100% secure.
+        </p>
+    </form>
+</div>
+
+</body>
+</html>
