--- a/index.html
+++ b/index.html
@@ -22,19 +22,52 @@
             background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            text-align: center; /* Center aligns the branding elements */
         }
+
+        /* Branding Styles */
+        .brand-header {
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #e5e7eb;
+        }
+        .brand-logo {
+            width: 120px; /* Reduced size for single column layout */
+            height: auto;
+            margin: 0 auto 10px;
+            border-radius: 4px;
+        }
+        .brand-title {
+            font-size: 28px;
+            font-weight: 900;
+            color: #1f2937;
+            line-height: 1.1;
+            text-transform: uppercase;
+            margin-bottom: 5px;
+        }
+        .brand-subtitle {
+            font-size: 16px;
+            font-weight: 700;
+            color: #FFD700; /* Gold */
+        }
+        .brand-tagline {
+            font-size: 12px;
+            color: #6b7280;
+            margin-top: 5px;
+        }
+
+        /* Form Content Styles */
         .form-title {
             font-size: 22px;
             font-weight: bold;
             color: #1f2937;
             margin-bottom: 10px;
-            text-align: left;
+            text-align: left; /* Align form content left */
         }
         .form-subtitle {
             color: #4b5563;
             margin-bottom: 25px;
-            text-align: left;
+            text-align: left; /* Align form content left */
         }
         .form-field {
             margin-bottom: 15px;
@@ -67,47 +100,25 @@
             cursor: pointer;
             margin-top: 15px;
         }
-        /* Custom styles for branding */
-        .branding-area {
-            margin-bottom: 25px;
-            padding-bottom: 15px;
-            border-bottom: 1px solid #e5e7eb;
-        }
-        .branding-area img {
-            width: 80px; /* Logo size reduced to fit clean design */
-            margin-bottom: 10px;
-        }
-        .branding-area h1 {
-            font-size: 24px;
-            font-weight: 900;
-            line-height: 1.1;
-            color: #1f2937;
-            margin: 0;
-        }
-        .branding-area .tagline-small {
-            font-size: 12px;
-            color: #FFD700;
-            font-weight: 700;
-            display: block;
-        }
-        .branding-area .tagline-smallest {
-            font-size: 10px;
-            color: #6b7280;
-            display: block;
-        }
     </style>
 </head>
 <body>
 
 <div class="form-container">
 
-    <div class="branding-area">
+    <div class="brand-header">
         <img src="https://i.imgur.com/EwWFtC6.jpg" 
              alt="One Quarter Equals A D$llar Blueprint Cover" 
-             style="width: 80px; margin-bottom: 10px; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
-        <h1>ONE QUARTER EQUALS A D$LLAR</h1>
-        <span class="tagline-small">7 Chapters to 7 Figures</span>
-        <span class="tagline-smallest">The #1 Blueprint To Financial Freedom</span>
+             class="brand-logo">
+        <div class="brand-title">
+            ONE QUARTER EQUALS A D$LLAR
+        </div>
+        <div class="brand-subtitle">
+            7 Chapters to 7 Figures
+        </div>
+        <div class="brand-tagline">
+            The #1 Blueprint To Financial Freedom
+        </div>
     </div>
     
     <h2 class="form-title">Get Your Free Inside Look</h2>
@@ -120,4 +131,20 @@
             <input type="text" name="fields[name]" id="name" placeholder="John Doe" class="form-input" autocomplete="name">
         </div>
 
-        <div class="form-
+        <div class="form-field">
+            <label for="email" class="form-label">Enter Your Best Email *</label>
+            <input type="email" name="fields[email]" id="email" required placeholder="you@example.com" class="form-input" autocomplete="email">
+        </div>
+
+        <button type="submit" class="submit-button">
+            Get My Free Inside Look
+        </button>
+
+        <p style="text-align: center; font-size: 12px; color: #6b7280; margin-top: 10px;">
+            We respect your privacy. Your data is 100% secure.
+        </p>
+    </form>
+</div>
+
+</body>
+</html>
