--- a/index.html
+++ b/index.html
@@ -1,150 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONE QUARTER EQUALS A D$LLAR</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-        }
-        .form-container {
-            max-width: 450px;
-            width: 100%;
-            padding: 30px;
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            text-align: center; /* Center aligns the branding elements */
-        }
-
-        /* Branding Styles */
-        .brand-header {
-            padding-bottom: 20px;
-            margin-bottom: 20px;
-            border-bottom: 1px solid #e5e7eb;
-        }
-        .brand-logo {
-            width: 120px; /* Reduced size for single column layout */
-            height: auto;
-            margin: 0 auto 10px;
-            border-radius: 4px;
-        }
-        .brand-title {
-            font-size: 28px;
-            font-weight: 900;
-            color: #1f2937;
-            line-height: 1.1;
-            text-transform: uppercase;
-            margin-bottom: 5px;
-        }
-        .brand-subtitle {
-            font-size: 16px;
-            font-weight: 700;
-            color: #FFD700; /* Gold */
-        }
-        .brand-tagline {
-            font-size: 12px;
-            color: #6b7280;
-            margin-top: 5px;
-        }
-
-        /* Form Content Styles */
-        .form-title {
-            font-size: 22px;
-            font-weight: bold;
-            color: #1f2937;
-            margin-bottom: 10px;
-            text-align: left; /* Align form content left */
-        }
-        .form-subtitle {
-            color: #4b5563;
-            margin-bottom: 25px;
-            text-align: left; /* Align form content left */
-        }
-        .form-field {
-            margin-bottom: 15px;
-            text-align: left;
-        }
-        .form-label {
-            display: block;
-            font-size: 14px;
-            font-weight: 500;
-            color: #374151;
-            margin-bottom: 5px;
-        }
-        .form-input {
-            width: 100%;
-            padding: 10px 12px;
-            border: 1px solid #d1d5db;
-            border-radius: 4px;
-            box-sizing: border-box;
-            font-family: inherit;
-        }
-        .submit-button {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            font-weight: bold;
-            color: #1c213d;
-            background-color: #FFD700; 
-            cursor: pointer;
-            margin-top: 15px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ONE QUARTER EQUALS A D$LLAR</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+/* Set a custom font family */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+body {
+font-family: 'Inter', sans-serif;
+background-color: #0d1226; /* Dark navy background for the whole page */
+}
+/* Using solid gold color for strong contrast like the cover art */
+.title-text {
+color: #FFD700; /* Solid Gold */
+font-weight: 900;
+line-height: 1.1; /* Tighter line height for large text */
+}
+/* Custom input focus color (using CSS for stability) */
+.form-input-style:focus {
+border-color: #FFD700 !important;
+box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
+outline: none;
+}
+/* Style to ensure the image displays as a rectangle */
+.book-cover-container {
+    height: auto;
+    width: 256px; 
+    max-width: 100%;
+}
+</style>
 </head>
-<body>
+<body class="min-h-screen flex items-center justify-center p-4">
 
-<div class="form-container">
+<div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
-    <div class="brand-header">
-        <img src="https://i.imgur.com/EwWFtC6.jpg" 
-             alt="One Quarter Equals A D$llar Blueprint Cover" 
-             class="brand-logo">
-        <div class="brand-title">
-            ONE QUARTER EQUALS A D$LLAR
-        </div>
-        <div class="brand-subtitle">
-            7 Chapters to 7 Figures
-        </div>
-        <div class="brand-tagline">
-            The #1 Blueprint To Financial Freedom
-        </div>
-    </div>
-    
-    <h2 class="form-title">Get Your Free Inside Look</h2>
-    <p class="form-subtitle">Start converting a Quarter of Effort into a Dollar of Wealth.</p>
+<div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
 
-    <form id="lead-form" action="YOUR_MAILERLITE_FORM_ACTION_URL" method="post">
+<header class="text-center w-full">
+<p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
+</header>
 
-        <div class="form-field">
-            <label for="name" class="form-label">Your Name (Optional)</label>
-            <input type="text" name="fields[name]" id="name" placeholder="John Doe" class="form-input" autocomplete="name">
-        </div>
-
-        <div class="form-field">
-            <label for="email" class="form-label">Enter Your Best Email *</label>
-            <input type="email" name="fields[email]" id="email" required placeholder="you@example.com" class="form-input" autocomplete="email">
-        </div>
-
-        <button type="submit" class="submit-button">
-            Get My Free Inside Look
-        </button>
-
-        <p style="text-align: center; font-size: 12px; color: #6b7280; margin-top: 10px;">
-            We respect your privacy. Your data is 100% secure.
-        </p>
-    </form>
+<div class="book-cover-container mx-auto p-2">
+    <img src="https://i.imgur.com/EwWFtC6.jpg"
+    alt="One Quarter Equals A D$llar Blueprint Cover"
+    onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
+    class="w-full h-auto object-contain rounded-lg shadow-xl">
 </div>
 
-</body>
-</html>
+<main class="text-center">
+<h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
+<span class="block">ONE QUARTER</span>
+<span class="block">EQUALS A D$LLAR</span>
+</h1>
+<p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
+<p class="text-gray-400 text-sm mt-2">The #1 Blueprint To Financial Freedom</p>
+</main>
+
+<footer class="mt-auto pt-8">
+<p class="text-xs text-gray-500">© 2025 One Quarter Enterprises LLC</p>
+</footer>
+</div>
+
+<div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
+<div id="form-content">
+<h2 class
