--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ input::placeholder {
 }
 </style>
 </head>
-<body class="min-h-screen flex items-center justify-center p-8"> 
+<body class="min-h-screen flex items-center justify-center p-4"> 
 <div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
-<div class="md:w-1/2 p-8 md:p-12 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-10">
+<div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
 <header class="text-center w-full">
 <p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
 </header>
 
-<div class="book-cover-container mx-auto p-2" style="margin-top: 2rem; margin-bottom: 2rem;">
+<div class="book-cover-container mx-auto p-2" style="margin-top: 1rem; margin-bottom: 1rem;">
     <img src="https://i.imgur.com/EwWFtC6.jpg"
     alt="One Quarter Equals A D$llar Blueprint Cover"
     onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
@@ -53,18 +53,28 @@ input::placeholder {
 </div>
 
 <main class="text-center">
-<h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-6 uppercase">
+<h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
 <span class="block">ONE QUARTER</span>
 <span class="block">EQUALS A D$LLAR</span>
 </h1>
 <p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
-<p class="text-gray-400 text-sm mt-3">The #1 Blueprint To Financial Freedom</p>
+<p class="text-gray-400 text-sm mt-2">The #1 Blueprint To Financial Freedom</p>
 </main>
 
-<footer class="mt-auto pt-10">
+<footer class="mt-auto pt-8">
 <p class="text-xs text-gray-500">© 2025 One Quarter Enterprises LLC</p>
 </footer>
 </div>
 
-<div class="md:w-1/2 p-8 md:p-12 bg-[#1c213d] flex flex-col justify-center text-white">
+<div class="md:w-1/2 p-6 md:p-8 bg-[#1c213d] flex flex-col justify-center text-white">
 <div id="form-content">
+<h2 class="text-2xl font-bold text-white mb-4">
+Get Your Free Inside Look
+</h2>
+<p class="text-gray-300 mb-6">
+Start converting a Quarter of Effort into a Dollar of Wealth.
+</p>
+
+<form id="lead-form" class="space-y-4"
+action="YOUR_MAILERLITE_FORM_ACTION_URL"
+method="post">
