--- a/index.html
+++ b/index.html
@@ -30,24 +30,106 @@ outline: none;
     width: 256px; 
     max-width: 100%;
 }
-/* Fix for placeholder color on the dark background */
-input::placeholder {
-    color: #9ca3af; /* Light gray to show placeholder text */
-    opacity: 1; /* Override default opacity */
-}
 </style>
 </head>
-<body class="min-h-screen flex items-center justify-center p-4"> 
+<body class="min-h-screen flex items-center justify-center p-4">
+
 <div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
 <div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
+
 <header class="text-center w-full">
 <p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
 </header>
 
-<div class="book-cover-container mx-auto p-2" style="margin-top: 1rem; margin-bottom: 1rem;">
+<div class="book-cover-container mx-auto p-2">
     <img src="https://i.imgur.com/EwWFtC6.jpg"
     alt="One Quarter Equals A D$llar Blueprint Cover"
     onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
     class="w-full h-auto object-contain rounded-lg shadow-xl">
 </div>
+
+<main class="text-center">
+<h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
+<span class="block">ONE QUARTER</span>
+<span class="block">EQUALS A D$LLAR</span>
+</h1>
+<p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
+<p class="text-gray-400 text-sm mt-2">The #1 Blueprint To Financial Freedom</p>
+</main>
+
+<footer class="mt-auto pt-8">
+<p class="text-xs text-gray-500">© 2025 One Quarter Enterprises LLC</p>
+</footer>
+</div>
+
+<div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
+<div id="form-content">
+<h2 class="text-2xl font-bold text-gray-900 mb-4">
+Get Your Free Inside Look
+</h2>
+<p class="text-gray-600 mb-6">
+Start converting a Quarter of Effort into a Dollar of Wealth.
+</p>
+
+<form id="lead-form" class="space-y-4"
+action="YOUR_MAILERLITE_FORM_ACTION_URL"
+method="post">
+
+<div style="margin-bottom: 1rem;">
+<label for="name" class="block text-sm font-medium text-gray-700">Your Name (Optional)</label>
+<input type="text" name="fields[name]" id="name" placeholder="John Doe"
+style="display: block; width: 100%; padding: 10px 16px; border: 1px solid #d1d5db; border-radius: 6px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); box-sizing: border-box; font-family: inherit;"
+class="form-input-style"
+autocomplete="name">
+</div>
+
+<div style="margin-bottom: 1rem;">
+<label for="email" class="block text-sm font-medium text-gray-700">Enter Your Best Email *</label>
+<input type="email" name="fields[email]" id="email" required placeholder="you@example.com"
+style="display: block; width: 100%; padding: 10px 16px; border: 1px solid #d1d5db; border-radius: 6px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); box-sizing: border-box; font-family: inherit;"
+class="form-input-style"
+autocomplete="email">
+</div>
+
+<button type="submit"
+class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-lg text-lg font-bold text-[#1c213d] bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500 transition duration-300 ease-in-out">
+Get My Free Inside Look
+</button>
+
+<p id="form-message" class="text-center text-sm mt-3" style="display: none;"></p>
+
+<p class="text-xs text-center text-gray-500 mt-4">
+We respect your privacy. Your data is 100% secure.
+</p>
+</form>
+</div>
+
+<div id="thank-you-message" class="hidden text-center p-8 bg-white rounded-lg shadow-xl">
+<h2 class="text-3xl font-bold text-green-600 mb-4">Success!</h2>
+<p class="text-lg text-gray-700 mb-6">
+Thank you for your interest! Your free 'Inside Look' has been sent to your email address.
+</p>
+<p class="text-sm text-gray-500">
+Check your inbox (and spam folder) now!
+</p>
+</div>
+</div>
+
+</div>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+const form = document.getElementById('lead-form');
+const formMessage = document.getElementById('form-message');
+
+form.addEventListener('submit', () => {
+formMessage.style.display = 'block';
+formMessage.textContent = 'Submitting... Taking you to the next step.';
+formMessage.classList.remove('text-red-500', 'text-green-600');
+formMessage.classList.add('text-gray-500');
+});
+});
+</script>
+</body>
+</html>
